update junit to match test changes

--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
             <version>2.7</version>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
             <version>RELEASE</version>
         </dependency>
         <dependency>
